# glitch-in-the-matrix

./: Cargo.toml  LICENSE  README.md  events.json  sync.json
examples/: echo.rs
examples_/: echo.rs
glitch-in-the-matrix/: Cargo.toml
glitch-in-the-matrix/examples/: echo.rs
glitch-in-the-matrix/src/: errors.rs  http.rs  lib.rs  media.rs  presence.rs  profile.rs  request.rs  room.rs  sync.rs  util.rs
glitch-in-the-matrix/tests/: main.rs  sync_unstable.json
glitch-in-the-matrix/tests/event-examples/: #invite_room_state.name
gm-boilerplate/: Cargo.toml
gm-boilerplate/src/: lib.rs
gm-types/: Cargo.toml
gm-types/src/: events.rs  lib.rs  messages.rs  replies.rs  room.rs  sync.rs
gm-types/src/content/: mod.rs
gm-types/src/content/call/: mod.rs  types.rs
gm-types/src/content/room/: mod.rs  types.rs
gm-types/src/content/root/: mod.rs  types.rs
src/: appserv.rs  lib.rs  request.rs  room.rs  types.rs  util.rs
src/types/: content.rs  events.rs  messages.rs  mod.rs  replies.rs  requests.rs
src/types/content/: mod.rs
src/types/content/call/: types.rs
src/types/content/room/: mod.rs
src/types/content/root/: mod.rs  types.rs
tests/: main.rs  sync_r0.json
tests/event-examples/: #invite_room_state.invite
