[package]
name = "glitch-in-the-matrix"
description = "A set of matrix.org bindings for Rust."
documentation = "http://docs.rs/glitch-in-the-matrix"
homepage = "https://github.com/eeeeeta/glitch-in-the-matrix"
repository = "https://github.com/eeeeeta/glitch-in-the-matrix"
readme = "README.md"
keywords = ["chat", "matrix"]
license = "Unlicense"
version = "0.4.0"
authors = ["eeeeeta <eeeeeta@users.noreply.github.com>"]

[dependencies]
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
hyper = "0.10"
error-chain = "0.10"
hyper-native-tls = "0.2"
