[package]
authors = ["eeeeeta <eeeeeta@users.noreply.github.com>", "digital <coding@digitalville.de>"]
description = "A set of matrix.org bindings for Rust."
documentation = "http://docs.rs/glitch-in-the-matrix"
homepage = "https://github.com/eeeeeta/glitch-in-the-matrix"
keywords = ["chat", "matrix"]
license = "CC0-1.0"
name = "glitch-in-the-matrix"
readme = "../README.md"
repository = "https://github.com/eeeeeta/glitch-in-the-matrix"
version = "0.14.0"

[dependencies]
failure = "0.1"
failure_derive = "0.1"
futures = "0.1"
hyper = "0.11"
hyper-openssl = "0.3"
percent-encoding = "1.0"
serde = "1.0"
serde_json = "1.0"
tokio-core = "0.1"

[dependencies.uuid]
version = "0.6"
features = ["v4"]

[dependencies.gm-types]
path = "../gm-types"
version = "0.4.0"

[dev-dependencies]
rpassword = "0.4.2"

[features]
gitm_deny_unknown = []
gitm_show_responses = []
